# carpool

./: .dockerignore  .gitignore  .zshrc  Dockerfile.api  GOOGLE_OAUTH_SETUP.md  README.md  alembic.ini  carpool_local.db  check_health.py  cloudbuild.api.yaml  cloudbuild.web.yaml  deploy-all.sh  env.example  migrate_tinydb_to_postgres.py  pyproject.toml  pytest.ini  quick_api_test.py  redeploy-api.sh  run_migration.py  setup_database.sql  start_server.py  test_all_api_endpoints.py  test_gcp_api.py  test_on_demand_api.py  test_postgres_api.py  test_production_api.py  test_web_app.py
alembic/: env.py
alembic/versions/: add_coordinate_fields_to_on_demand_requests.py  add_google_oauth_fields.py
data/: db.json
src/carpool/: __init__.py  __main__.py  api.py  cli.py  database.py
tests/: test_sanity.py
web/: Dockerfile.web  env.example  index.html  nginx.conf  package-lock.json  package.json
web/src/: App.tsx  config.ts  main.tsx
web/src/components/: ErrorBoundary.tsx
web/src/pages/: Admin.tsx  Login.tsx  MyAccount.tsx  Signup.tsx
web/src/utils/: googleAuth.ts
